--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,8 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
