--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 #root {
+  background-color: #ffffff;
   max-width: 1280px;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
