--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,9 @@ html, body {
 }
 
 #root {
-  max-width: 1280px;
   min-height: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 2rem;
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
