--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@ html, body {
 
 #root {
   min-height: 100%;
-  margin: 0 auto;
-  padding: 0 2rem;
+  margin: 0;
+  padding: 0;
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
