--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html, body {
   min-height: 100vh;
-  background-color: #ffffff;
+  background-color: var(--background-primary);
   min-width: 100vw;
 }
 
